Perkin-UAT/force-app/main/default/objects/SIOP_Model_Master__c/SIOP_Model_Master__c.object-meta.xml
<CustomObject>
    <label>SIOP Model Master</label>
    <nameField>
        <label>SIOP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIOP Model Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>