Perkin-UAT/force-app/main/default/objects/SIOP_Model_Master__c/fields/flagForUpdate__c.field-meta.xml
<CustomField>
    <fullName>flagForUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to trigger an update on this record by admins without modifying any other field values</description>
    <label>flagForUpdate</label>
    <type>Checkbox</type>
</CustomField>