Perkin-UAT/force-app/main/default/objects/SIOP_Model_Master__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then this SIOP Model is no longer in use and excluded from future data entry input.</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>