Perkin-UAT/force-app/main/default/objects/SIOP_Model_Master__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Find the related product for this SIOP Model</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SIOP Model Masters</relationshipLabel>
    <relationshipName>SIOP_Model_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>