Perkin-UAT/force-app/main/default/objects/SIOP_Model_Master__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>The Product line for the linked Product</description>
    <label>Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>