Perkin-UAT/force-app/main/default/objects/SIOP_Model_Master__c/fields/Region_Forecast_Owner_EMEA__c.field-meta.xml
<CustomField>
    <fullName>Region_Forecast_Owner_EMEA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who manages the forecast for EMEA when future records are created</description>
    <label>Region Forecast Owner EMEA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SIOP_Model_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>