Perkin-UAT/force-app/main/default/objects/SIOP_Model_Master__c/fields/SIOP_Lead__c.field-meta.xml
<CustomField>
    <fullName>SIOP_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SIOP Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SIOP_Model_Masters4</relationshipName>
    <type>Lookup</type>
</CustomField>