Perkin-UAT/force-app/main/default/objects/SIOP_Model_Master__c/fields/SIOP_Number__c.field-meta.xml
<CustomField>
    <fullName>SIOP_Number__c</fullName>
    <displayFormat>SIOP-{0000}</displayFormat>
    <label>SIOP Number</label>
    <type>AutoNumber</type>
</CustomField>