Perkin-UAT/force-app/main/default/objects/SIOP_Model_Master__c/listViews/SIOP_Master_inactive.listView-meta.xml
<ListView>
    <fullName>SIOP_Master_inactive</fullName>
    <columns>NAME</columns>
    <columns>Product_Line__c</columns>
    <columns>Product_Line_Description__c</columns>
    <columns>Product_Manager__c</columns>
    <columns>Region_Forecast_Owner_Americas__c</columns>
    <columns>Region_Forecast_Owner_EMEA__c</columns>
    <columns>Region_Forecast_Owner_APAC__c</columns>
    <columns>SIOP_Lead__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CountofData__c</columns>
    <columns>SIOP_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>SIOP Master (inactive)</label>
</ListView>